--- a/Basics/001_learning_jupyter.ipynb
+++ b/Basics/001_learning_jupyter.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Basic introduction to markdown cells and code cells."
+   ]
   },
   {
    "cell_type": "code",
